--- a/GitHubClient/resource/Base.lproj/Main.storyboard
+++ b/GitHubClient/resource/Base.lproj/Main.storyboard
@@ -3,12 +3,13 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Application Container View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GitHubClient" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ApplicationContainerViewController" customModule="GitHubClient" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -21,6 +22,60 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="541" y="344"/>
+        </scene>
+        <!--Repositories View Controller-->
+        <scene sceneID="R89-Xh-wGz">
+            <objects>
+                <viewController storyboardIdentifier="RepositoriesViewController" id="KvV-1k-lIT" customClass="RepositoriesViewController" customModule="GitHubClient" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="5Xd-6R-ws0"/>
+                        <viewControllerLayoutGuide type="bottom" id="YBF-AD-rdD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="AlW-xH-HbZ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pUM-e3-mcS">
+                                <rect key="frame" x="20" y="28" width="461" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eKB-oc-nGL">
+                                <rect key="frame" x="496" y="28" width="84" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="84" id="Ral-yX-gbV"/>
+                                    <constraint firstAttribute="height" constant="30" id="Tp5-iw-4pp"/>
+                                </constraints>
+                                <state key="normal" title="Present"/>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1k8-4F-LoF">
+                                <rect key="frame" x="0.0" y="80" width="600" height="520"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="pUM-e3-mcS" firstAttribute="top" secondItem="5Xd-6R-ws0" secondAttribute="bottom" constant="8" id="DuE-2s-BR4"/>
+                            <constraint firstAttribute="trailing" secondItem="1k8-4F-LoF" secondAttribute="trailing" id="E26-tv-lpE"/>
+                            <constraint firstItem="eKB-oc-nGL" firstAttribute="top" secondItem="5Xd-6R-ws0" secondAttribute="bottom" constant="8" id="GPg-Zn-inD"/>
+                            <constraint firstItem="pUM-e3-mcS" firstAttribute="leading" secondItem="AlW-xH-HbZ" secondAttribute="leading" constant="20" id="KeL-lC-L4R"/>
+                            <constraint firstItem="1k8-4F-LoF" firstAttribute="top" secondItem="eKB-oc-nGL" secondAttribute="bottom" constant="22" id="Wbd-rd-Pft"/>
+                            <constraint firstItem="YBF-AD-rdD" firstAttribute="top" secondItem="1k8-4F-LoF" secondAttribute="bottom" id="joU-17-jzR"/>
+                            <constraint firstItem="eKB-oc-nGL" firstAttribute="trailing" secondItem="AlW-xH-HbZ" secondAttribute="trailingMargin" id="o8G-ud-tam"/>
+                            <constraint firstItem="1k8-4F-LoF" firstAttribute="leading" secondItem="AlW-xH-HbZ" secondAttribute="leading" id="scG-09-2uK"/>
+                            <constraint firstItem="eKB-oc-nGL" firstAttribute="leading" secondItem="pUM-e3-mcS" secondAttribute="trailing" constant="15" id="zn0-cG-HN4"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="presentButton" destination="eKB-oc-nGL" id="Nl6-qe-2Cj"/>
+                        <outlet property="tableView" destination="1k8-4F-LoF" id="IZl-2d-Rab"/>
+                        <outlet property="textField" destination="pUM-e3-mcS" id="ter-Hb-xh9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dIM-Ec-idR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1226" y="344"/>
         </scene>
     </scenes>
 </document>
